fix(): Make list points be properly aligned

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,18 @@
   a {
     @apply transition-opacity;
   }
+
   a:hover {
     @apply opacity-75;
   }
+}
+
+.prose li {
+  list-style: none;
+  padding-left: 0.75em;
+}
+
+.prose li::before {
+  content: "• ";
+  margin-left: -0.75em;
 }
